--- a/Cocktail Class/jq crud/index.html
+++ b/Cocktail Class/jq crud/index.html
@@ -8,9 +8,10 @@
   <body>
     <h1>JQ CRUD</h1>
     <div id="create">
-      <form action="">
-        Title: <input type="text" id="title" name="title" />, Body:
-        <input type="text" id="body" name="body" />
+      <form action="" id="newForm">
+        Body:
+        <input type="text" id="body" name="body" value="new Recipe details" />
+        Title: <input type="text" id="title" name="title" value="Chicken" />,
       </form>
       <button id="btn">Submit</button>
     </div>
